...
                                        <constraints>
                                            <constraint firstItem="HoS-vG-Gq7" firstAttribute="centerX" secondItem="rND-c3-RoI" secondAttribute="centerX" id="NJL-f4-qAR"/>
                                            <constraint firstItem="HoS-vG-Gq7" firstAttribute="centerY" secondItem="rND-c3-RoI" secondAttribute="centerY" id="beQ-Ue-wF5"/>
                                            <constraint firstAttribute="height" constant="381" id="iVg-dl-46l"/>
                                        </constraints>
                                    </view>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome to Musico" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PSu-vL-w2k">
                                        <rect key="frame" x="0.0" y="20" width="374" height="38"/>
                                        <color key="tintColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <fontDescription key="fontDescription" name="GillSans" family="Gill Sans" pointSize="33"/>
                                        <color key="textColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <nil key="highlightedColor"/>
                                    </label>
...
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Network with people who think about what you" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id=
                                        <rect key="frame" x="20" y="642" width="374" height="60"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Collaborate together" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fFI-gd-rhp" customClass="LabelPrimaryDesi
                                        <rect key="frame" x="20" y="449.5" width="374" height="42.5"/>
                                        <color key="tintColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <fontDescription key="fontDescription" name="GillSans" family="Gill Sans" pointSize="37"/>
                                        <color key="textColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <nil key="highlightedColor"/>
                                    </label>
...
                                        <constraints>
                                            <constraint firstItem="REf-7P-U0C" firstAttribute="centerY" secondItem="kve-y3-8l6" secondAttribute="centerY" id="21z-6O-faY"/>
                                            <constraint firstItem="REf-7P-U0C" firstAttribute="centerX" secondItem="kve-y3-8l6" secondAttribute="centerX" id="8im-2Q-IMi"/>
                                            <constraint firstAttribute="height" constant="381" id="uZc-Ty-BKH"/>
                                        </constraints>
                                    </view>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Build Custom Playlists" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rev-8b-f12" customClass="LabelPrimaryDe
                                        <rect key="frame" x="20" y="478" width="334" height="38"/>
                                        <color key="tintColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <fontDescription key="fontDescription" name="GillSans" family="Gill Sans" pointSize="33"/>
                                        <color key="textColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <nil key="highlightedColor"/>
                                    </label>
...
                                        <rect key="frame" x="20" y="766" width="334" height="50"/>
                                        <color key="backgroundColor" systemColor="systemGroupedBackgroundColor" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="50" id="2bm-Hn-gk2"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" name="GillSans" family="Gill Sans" pointSize="27"/>
                                        <state key="normal" title="Proceed">
                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
                                        <connections>
                                            <action selector="btnNavToSignUp:" destination="iST-0O-bB5" eventType="touchUpInside" id="2iz-BG-OGR"/>
                                        </connections>
                                    </button>
...
