...
    }

    @IBAction func logout(_ sender: Any) {
        let dialogMessage = UIAlertController(title: "Logging Out",
                                              message: "Are you sure you want log out?",
                                              preferredStyle: .alert)
        let okAction = UIAlertAction(title: "OK",
                               style: .default,
                               handler: { (_) -> Void in
             print("Ok button tapped")
                                self.profileViewModel.logoutRequest()
        })
        let cancel = UIAlertAction(title: "Cancel", style: .cancel) { (_) -> Void in
        }
        dialogMessage.addAction(okAction)
        dialogMessage.addAction(cancel)
        self.present(dialogMessage, animated: true, completion: nil)
    }
}
...
