...
                                                                <variation key="heightClass=regular-widthClass=regular" constant="60"/>
                                                            </constraint>
                                                        </constraints>
                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                        <textInputTraits key="textInputTraits"/>
                                                    </textField>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="44e-v8-PLz">
                                                        <rect key="frame" x="18" y="77" width="378" height="45"/>
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="45" id="c80-iJ-Rlb">
                                                                <variation key="heightClass=regular-widthClass=regular" constant="60"/>
                                                            </constraint>
                                                        </constraints>
...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="KON-2S-pqY" id="vHd-Z9-hG1"/>
                            <outlet property="delegate" destination="KON-2S-pqY" id="hOQ-IM-o9n"/>
                        </connections>
                    </tableView>
                    <tabBarItem key="tabBarItem" title="Search" image="magnifyingglass" catalog="system" id="EJc-tj-MZr"/>
                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                    <connections>
                        <outlet property="searchBar" destination="Nth-xv-Fa4" id="S5z-Vx-fa3"/>
                    </connections>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="1Gk-mu-iIZ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
...
